<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context=".BurnedCaloriesCalculator">

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_label"
        android:id="@+id/weightLabel"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_ran_label"
        android:id="@+id/milesRanLabel"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/weightLabel"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_burned_label"
        android:id="@+id/caloriesBurnedLabel"
        android:layout_below="@+id/milesRanLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <TextView
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorie_burned_view"
        android:id="@+id/caloriesBurnedView"
        android:layout_alignTop="@+id/caloriesBurnedLabel"
        android:layout_toEndOf="@+id/caloriesBurnedLabel"
        android:layout_marginStart="91dp" />

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_label"
        android:id="@+id/heightLabel"
        android:layout_below="@+id/caloriesBurnedLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_label"
        android:id="@+id/bmiLabel"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/feet"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_view"
        android:id="@+id/bmiView"
        android:layout_alignTop="@+id/bmiLabel"
        android:layout_alignStart="@+id/caloriesBurnedView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/weightEditText"
        android:layout_above="@+id/milesRanLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/weight_edit_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:inputType="text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/weightEditText" />

    <TextView
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:id="@+id/nameLabel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feet"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/inches"
        android:layout_alignStart="@+id/mileRanView"
        android:layout_toStartOf="@+id/bmiView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inches"
        android:layout_alignTop="@+id/heightLabel"
        android:layout_toEndOf="@+id/feet"
        android:spinnerMode="dropdown" />

    <TextView
        style = "@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_ran_view"
        android:id="@+id/mileRanView"
        android:layout_alignBottom="@+id/milesRanLabel"
        android:layout_alignStart="@+id/weightEditText" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/milesRanProgress"
        android:max="10"
        android:padding="10dp"
        android:progress="1"
        android:layout_above="@+id/caloriesBurnedLabel"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/mileRanView"
        android:indeterminate="false" />

</RelativeLayout>
